<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="@drawable/ic_bottombar"
    android:baselineAligned="true"
    >
    <LinearLayout
        android:layout_width="wrap_content" 
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center|center_vertical"
	    android:background="@null"
	    android:layout_marginLeft="5dp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_weight="1"
	    >
    	<Button
	        android:layout_width="30dp" 
	        android:layout_height="30dp"
	        android:background="@drawable/ic_project"
	        />   
	    <TextView
	        style="@style/TextView.ApplicationBottom"
	        android:text="@string/txtview_bottombar_editProject"
	        />    
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content" 
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center|center_vertical"
	    android:background="@null"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_weight="1"
	    >
    	<Button
	        android:layout_width="30dp" 
	        android:layout_height="30dp"
	        android:background="@drawable/ic_cambgin"
	        />   
	    <TextView
	        style="@style/TextView.ApplicationBottom"
	        android:text="@string/txtview_bottombar_editCampaign"
	        />    
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content" 
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center|center_vertical"
	    android:background="@null"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_weight="1"
	    >
    	<Button
	        android:layout_width="30dp" 
	        android:layout_height="30dp"
	        android:background="@drawable/ic_activity"
	        />   
	    <TextView
	       	style="@style/TextView.ApplicationBottom"
	        android:text="@string/txtview_bottombar_activityReport"
	        android:singleLine="true"
	        />    
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content" 
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center|center_vertical"
	    android:background="@null"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_weight="1"
	    >
    	<Button
	        android:layout_width="30dp" 
	        android:layout_height="30dp"
	        android:background="@drawable/ic_contact"
	        />   
	    <TextView
	        style="@style/TextView.ApplicationBottom"
	        android:text="@string/txtview_bottombar_contacts"
	        />    
    </LinearLayout>
    
</LinearLayout>