<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_splash_screen"
    >
    <com.android.salesapp.uc.ApplicationTop
        android:id="@+id/view_qualifier_topbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" 
        />
   	<RelativeLayout
   	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_qualifier_topbar"
        android:layout_above="@+id/view_qualifier_footbar"
        android:background="#FFFFFF"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:id="@+id/view_qualifier_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" 
            android:gravity="left|center_vertical"
            android:background="@null"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            >
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/txtview_qualifier_title"
	            android:textColor="#3B84D3"
	            android:textStyle="bold"
	            android:textSize="14sp"
	            android:layout_weight="0.4"	
	            />
           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="0.6"
               android:gravity="right"
               >
             	 <Button
             	    android:id="@+id/btn_qualifier_plus"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFFFF"
	                android:textSize="20dp"
	                android:textStyle="bold"
	                android:background="@drawable/ic_btn_plus"
	                />
           </LinearLayout>
        </LinearLayout>
         <View
           android:id="@+id/view_seperator_1" 
           android:layout_width="fill_parent"
           android:layout_height="2dp"
           android:background="#C4C4C4"
           android:layout_below="@+id/view_qualifier_title"
           />
        <LinearLayout
            android:id="@+id/view_qualifier_typeQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" 
            android:gravity="left|center_vertical"
            android:background="@null"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_below="@+id/view_seperator_1"
            >
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/txtview_qualifier_question"
	            android:textColor="#000000"
	            android:textStyle="bold"
	            android:textSize="15sp"
	           	android:layout_weight="0.6"
	            />
           	<EditText
           	    android:id="@+id/editText_Question"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/txtview_qualifier_question"
	            android:background="@drawable/editbox_white"
	            android:layout_weight="0.4"
	            />
        </LinearLayout>
         <View
           android:id="@+id/view_seperator_2"
           android:layout_width="fill_parent"
           android:layout_height="2dp"
           android:background="#C4C4C4"
           android:layout_below="@+id/view_qualifier_typeQuestion"
           />  
   	  	 <LinearLayout
   	  	   android:id="@+id/view_qualifier_selectType"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:padding="10dp" 
           android:gravity="left|center_vertical"
           android:background="@null"
           android:orientation="vertical"
           android:layout_below="@+id/view_seperator_2"
           >
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtview_qualifier_type"
	            android:textColor="#3B84D3"
	            android:textStyle="bold"
	            android:textSize="14sp"	
	            />
       
        </LinearLayout>
        <View
           android:id="@+id/view_seperator_3"
           android:layout_width="fill_parent"
           android:layout_height="2dp"
           android:background="#C4C4C4"
           android:layout_below="@+id/view_qualifier_selectType"
           />
         <ListView
            android:id="@+id/listview_qualifier"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:fadingEdge="none"
            android:fadingEdgeLength="0dp"
            android:divider="#ABABAB"
            android:layout_below="@+id/view_seperator_3"
            android:layout_above="@+id/view_qualifier_preview"
            />
      	 <!-- <LinearLayout
           android:id="@+id/view_qualifier_preview"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:background="@null"	
           android:layout_alignParentBottom="true"
           android:padding="5dp" 
           android:gravity="right"
           >
            <Button
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="Preview"
                android:textColor="#FFFFFF"
                android:background="@drawable/ic_btn_preview"
                />
       
        </LinearLayout> --> 
        
       
   	</RelativeLayout>
	<com.android.salesapp.uc.ApplicationBottom
	    android:id="@+id/view_qualifier_footbar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true" 
	    />
</RelativeLayout>